// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component test should render loading 1`] = `
<button
  className="button buttonClass is-loading"
  onClick={[Function]}
>
  button text
</button>
`;

exports[`Button component test should render without crash with wrapper 1`] = `
<button
  className="button  false"
  onClick={null}
/>
`;

exports[`Button component test should render without loading 1`] = `
<button
  className="button buttonClass false"
  onClick={[Function]}
>
  button text
</button>
`;
